--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anstream = "0.6.21"
+anstyle = "1.0.13"
 clap = { version = "4.5.48", features = ["derive"] }
+colorchoice-clap = "1.0.7"
 log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
