--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ include = ["/src", "README.md", "LICENSE"]
 anstream = "0.6.21"
 anstyle = "1.0.13"
 clap = { version = "4.5.48", features = ["derive"] }
+clap_mangen = "0.2.31"
 colorchoice-clap = "1.0.7"
 log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
