--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ colorchoice-clap = "1.0.7"
 log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+zbus = "5.12.0"
 
 [dev-dependencies]
 assert_float_eq = "1.1.4"
